--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^5.6.0",
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
